# loco

./: .gitignore  Cargo.toml  memory.x  readme.md
.cargo/: config  config.toml
examples/: blinky.rs  flash.rs  serial.rs  store.rs
pcb/: fp-lib-table  loco.ioc  loco.kicad_pcb  loco.kicad_prl  loco.kicad_pro  loco.kicad_sch  loco.kicad_sym  pcb.ioc  sym-lib-table
pcb/Library.pretty/: Header_03x06_P2.54mm_Vertical.kicad_mod
pcb/bom/: ibom.html
src/: lib.rs  motor.rs  pins.rs  power.rs  stepper.rs  store.rs
