[package]
name = "loco"
version = "0.0.0"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Board support crate for loco"
categories = ["no-std"]
documentation = "https://docs.rs/loco"
repository = "https://github.com/dotcypress/loco"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]

[dependencies]
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
stm32g0xx-hal = { git = "https://github.com/stm32-rs/stm32g0xx-hal", features = ["rt", "stm32g041"] }
kvs = { version="0.0.4", optional = true }
heapless = { version = "0.7.15", optional = true }

[dev_dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.1"

[features]
default = ["store"]
store = ["dep:kvs"]
stepper = ["dep:heapless"]

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
