[package]
name = "loco"
version = "0.0.0"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Board support crate for loco"
categories = ["no-std"]
documentation = "https://docs.rs/loco"
repository = "https://github.com/dotcypress/loco"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]

[dependencies]
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"
stm32g0xx-hal = { version="0.2.0", features = ["rt", "stm32g041"] }
heapless = { version = "0.7.16", optional = true }

[dev_dependencies]
defmt = "0.3.2"
defmt-rtt = "0.3.2"

[features]
default = ["stepper"]
stepper = ["dep:heapless"]

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
