[package]
name = "loco"
version = "0.0.0"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Board support crate for loco"
categories = ["no-std"]
documentation = "https://docs.rs/loco"
repository = "https://github.com/dotcypress/loco"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]

[dependencies]
cortex-m-rt = "0.7.3"
stm32c0xx-hal = { git = "https://github.com/stm32-rs/stm32c0xx-hal", features = ["rt", "stm32c031"] }
heapless = "0.7.16"

[profile.dev]
incremental = false
opt-level = 2

[profile.release]
incremental = false
lto = true
opt-level = "z"
